--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@ a {
     font-size: 25px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    text-align: center;
     background: palegoldenrod;
     border-radius: 15px;
 }
